--- a/learn-m365-pr/wwl/implement-lifecycle-management-governance-for-microsoft-teams/index.yml
+++ b/learn-m365-pr/wwl/implement-lifecycle-management-governance-for-microsoft-teams/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.implement-lifecycle-management-governance-for-microsoft-teams
 metadata:
   title: Implement lifecycle management and governance for Microsoft Teams
   description: "Learn about Teams lifecycle management and governance, including different features to govern Microsoft 365 Groups, ways to assign Teams policies, Teams preview features controls."
-  ms.date: 10/27/2021
+  ms.date: 06/10/2022
   author: wwlpublish
   ms.author: jennyche
   ms.topic: interactive-tutorial
@@ -13,11 +13,12 @@ summary: Learn about Teams lifecycle management and governance, including differ
 abstract: |
   By the end of this module, you will be able to:
   - Describe the lifecycle management for Teams
-  - Plan and configure Microsoft 365 Groups governance features for Teams.
-  - Plan the Teams policy assignment for different scenarios.
-  - Create and manage policy packages.
-  - Control Teams preview features for users.
-  - Create and manage team templates.
+  - Plan governance features for Teams
+  - Configure Microsoft 365 Groups governance features
+  - Plan the Teams policy assignment for different scenarios
+  - Create and manage policy packages
+  - Control Teams preview features for users
+  - Create and manage team templates and templates policies
 prerequisites: |
   - A proficient understanding of basic functional experience with Microsoft 365 services.
   - A proficient understanding of general IT practices, including using PowerShell.
@@ -34,7 +35,7 @@ subjects:
 - compliance
 units:
 - learn.wwl.implement-lifecycle-management-governance-for-microsoft-teams.introduction
-- 'learn.wwl.implement-lifecycle-management-governance-for-microsoft-teams.plan-teams-lifecycle '
+- learn.wwl.implement-lifecycle-management-governance-for-microsoft-teams.plan-teams-lifecycle
 - learn.wwl.implement-lifecycle-management-governance-for-microsoft-teams.plan-teams-governance
 - learn.wwl.implement-lifecycle-management-governance-for-microsoft-teams.manage-microsoft-365-groups-creation
 - learn.wwl.implement-lifecycle-management-governance-for-microsoft-teams.configure-microsoft-365-groups-expiration-policy
