changed files by pdets auto publish service, publishid[0d82f07c-fd90-4076-b15f-2c7815fd170c] and do [publish].

--- a/learn-m365-pr/wwl/plan-teams-phone-system/index.yml
+++ b/learn-m365-pr/wwl/plan-teams-phone-system/index.yml
@@ -2,7 +2,7 @@
 uid: learn.wwl.plan-teams-phone-system
 metadata:
   title: Plan for Teams Phone
-  description: "Understanding of what is included in Microsoft Phone System, what is needed to make and receive phone calls, how to plan for phone system devices, phone system features, and planning for cloud voicemail."
+  description: "Learn about Microsoft Teams Phone and what is needed to make and receive phone calls, plan for Teams Phone devices, features, and cloud voicemail."
   ms.date: 06/13/2022
   author: wwlpublish
   ms.author: dahans
