changed files by pdets auto publish service, publishid[97ad0228-757c-4336-950e-49a2eaecd8d4] and do [publish].

--- a/learn-m365-pr/wwl/create-information-barriers-microsoft-365/2-explore-information-barriers.yml
+++ b/learn-m365-pr/wwl/create-information-barriers-microsoft-365/2-explore-information-barriers.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.wwl.create-information-barriers-microsoft-365.explore-information-barriers
+uid: learn.wwl.create-information-barriers-microsoft-365.explore
 title: Explore information barriers in Microsoft 365
 metadata:
   title: Explore information barriers in Microsoft 365
