changed files by pdets auto publish service, publishid[47c7a1a6-35ec-491f-baac-a6414d8addde] and do [publish].

--- a/learn-m365-pr/wwl/explore-sensitivity-labels/4-determine-sensitivity-label-scope.yml
+++ b/learn-m365-pr/wwl/explore-sensitivity-labels/4-determine-sensitivity-label-scope.yml
@@ -1,20 +1,19 @@
 ### YamlMime:ModuleUnit
-uid: learn.wwl.explore-sensitivity-labels.determine-scope
+uid: learn.wwl.explore-sensitivity-labels.determine-sensitivity-label-scope
 title: Determine a sensitivity label's scope
 metadata:
   title: Determine a sensitivity label's scope
   description: "Determine a sensitivity label's scope"
-  ms.date: 09/15/2021
+  ms.date: 06/16/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
-sandbox: false
 labModal: false
 durationInMinutes: 7
 content: |
-  [!include[](includes/4-determine-scope.md)]
+  [!include[](includes/4-determine-sensitivity-label-scope.md)]
 quiz:
   title: "Check your knowledge"
   questions:
@@ -22,10 +21,10 @@ quiz:
     choices:
     - content: "Where the label will be visible to users"
       isCorrect: true
-      explanation: "That's correct. A label's scope determines two things - the label settings for that label and where the label will be visible to users."
+      explanation: "Correct. A label's scope determines two things - the label settings for that label and where the label will be visible to users."
     - content: "A help link to a custom help page"
       isCorrect: false
-      explanation: "That's incorrect. This action can be configured with a label policy. Try again."
+      explanation: "Incorrect. This action can be configured with a label policy."
     - content: "Choose which users and groups see the label"
       isCorrect: false
-      explanation: "That's incorrect. This action can be configured with a label policy. Try again."
+      explanation: "Incorrect. This action can be configured with a label policy."
