--- a/learn-m365-pr/wwl/explore-sensitivity-labels/5-explore-sensitivity-label-policies.yml
+++ b/learn-m365-pr/wwl/explore-sensitivity-labels/5-explore-sensitivity-label-policies.yml
@@ -1,17 +1,16 @@
 ### YamlMime:ModuleUnit
-uid: learn.wwl.explore-sensitivity-labels.label-policies
+uid: learn.wwl.explore-sensitivity-labels.explore-sensitivity-label-policies
 title: Explore sensitivity label policies
 metadata:
   title: Explore sensitivity label policies
   description: "Explore sensitivity label policies"
-  ms.date: 09/15/2021
+  ms.date: 06/16/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
-sandbox: false
 labModal: false
 durationInMinutes: 6
 content: |
-  [!include[](includes/5-label-policies.md)]
+  [!include[](includes/5-explore-sensitivity-label-policies.md)]
