--- a/learn-m365-pr/wwl/explore-sensitivity-labels/2-manage-data-protection-sensitivity-labels.yml
+++ b/learn-m365-pr/wwl/explore-sensitivity-labels/2-manage-data-protection-sensitivity-labels.yml
@@ -4,13 +4,12 @@ title: Manage data protection using sensitivity labels
 metadata:
   title: Manage data protection using sensitivity labels
   description: "Manage data protection using sensitivity labels"
-  ms.date: 09/15/2021
+  ms.date: 06/16/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
-sandbox: false
 labModal: false
 durationInMinutes: 6
 content: |
@@ -22,10 +21,10 @@ quiz:
     choices:
     - content: "It causes a watermark to be automatically displayed on the content"
       isCorrect: false
-      explanation: "That's incorrect. This action isn't the effect that encryption can have on a document. Try again."
+      explanation: "Incorrect. This action isn't the effect that encryption can have on a document."
     - content: "It can restrict what actions authorized people can take on the content"
       isCorrect: true
-      explanation: "That's correct. Encryption can also restrict what actions authorized people can take on the content."
+      explanation: "Correct. Encryption can also restrict what actions authorized people can take on the content."
     - content: "It automatically prohibits the document from being sent in emails"
       isCorrect: false
-      explanation: "That's incorrect. This action isn't the effect that encryption can have on a document. Try again."
+      explanation: "Incorrect. This action isn't the effect that encryption can have on a document."
