--- a/learn-m365-pr/wwl/explore-sensitivity-labels/3-explore-sensitivity-labels.yml
+++ b/learn-m365-pr/wwl/explore-sensitivity-labels/3-explore-sensitivity-labels.yml
@@ -1,17 +1,16 @@
 ### YamlMime:ModuleUnit
-uid: learn.wwl.explore-sensitivity-labels.explore-what-can-do
+uid: learn.wwl.explore-sensitivity-labels.explore-sensitivity-labels
 title: Explore what sensitivity labels can do
 metadata:
   title: Explore what sensitivity labels can do
   description: "Explore what sensitivity labels can do"
-  ms.date: 09/15/2021
+  ms.date: 06/16/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
-sandbox: false
 labModal: false
 durationInMinutes: 5
 content: |
-  [!include[](includes/3-explore-what-can-do.md)]
+  [!include[](includes/3-explore-sensitivity-labels.md)]
