--- a/learn-m365-pr/wwl/implement-sensitivity-labels/4-create-sensitivity-labels.yml
+++ b/learn-m365-pr/wwl/implement-sensitivity-labels/4-create-sensitivity-labels.yml
@@ -1,18 +1,19 @@
 ### YamlMime:ModuleUnit
-uid: learn.wwl.implement-sensitivity-labels.create
+uid: learn.wwl.implement-sensitivity-labels.create-sensitivity-labels
 title: Create sensitivity labels
 metadata:
   title: Create sensitivity labels
   description: "Create sensitivity labels"
-  ms.date: 06/18/2021
+  ms.date: 06/16/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 7
 content: |
-  [!include[](includes/4-create.md)]
+  [!include[](includes/4-create-sensitivity-labels.md)]
 quiz:
   title: "Check your knowledge"
   questions:
@@ -20,10 +21,10 @@ quiz:
     choices:
     - content: "Republish the label policy"
       isCorrect: false
-      explanation: "That's incorrect. This action isn't the next step that Holly should complete. Try again."
+      explanation: "Incorrect. This action isn't the next step that Holly should complete."
     - content: "Add the label to a new label policy"
       isCorrect: false
-      explanation: "That's incorrect. This action isn't the next step that Holly should complete. Try again."
+      explanation: "Incorrect. This action isn't the next step that Holly should complete."
     - content: "No extra steps are needed once the wizard is finished"
       isCorrect: true
-      explanation: "That's correct. If you edit a label that's already published by using a label policy, no extra steps are needed when you finish the wizard. For example, you don't need to add it to a new label policy for the changes to become available to the same users."
+      explanation: "Correct. If you edit a label that's already published by using a label policy, no extra steps are needed when you finish the wizard. For example, you don't need to add it to a new label policy for the changes to become available to the same users."
