--- a/learn-m365-pr/wwl/implement-sensitivity-labels/5-publish-sensitivity-labels.yml
+++ b/learn-m365-pr/wwl/implement-sensitivity-labels/5-publish-sensitivity-labels.yml
@@ -1,15 +1,16 @@
 ### YamlMime:ModuleUnit
-uid: learn.wwl.implement-sensitivity-labels.publish
+uid: learn.wwl.implement-sensitivity-labels.publish-sensitivity-labels
 title: Publish sensitivity labels
 metadata:
   title: Publish sensitivity labels
   description: "Publish sensitivity labels"
-  ms.date: 06/18/2021
+  ms.date: 06/16/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 5
 content: |
-  [!include[](includes/5-publish.md)]
+  [!include[](includes/5-publish-sensitivity-labels.md)]
