--- a/learn-m365-pr/wwl/implement-sensitivity-labels/index.yml
+++ b/learn-m365-pr/wwl/implement-sensitivity-labels/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.implement-sensitivity-labels
 metadata:
   title: Implement sensitivity labels
   description: "Implement sensitivity labels"
-  ms.date: 06/18/2021
+  ms.date: 06/16/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -29,18 +29,24 @@ roles:
 - solution-architect
 - technology-manager
 products:
-- azure-active-directory
 - m365
 - office-365
 subjects:
+- cloud-computing
+- cloud-security
+- collaboration
+- communication
 - compliance
+- information-protection-governance
+- security
+- threat-protection
 units:
 - learn.wwl.implement-sensitivity-labels.introduction
-- learn.wwl.implement-sensitivity-labels.examine-how-to-create-sensitivity-label
-- learn.wwl.implement-sensitivity-labels.develop-data-classification
-- learn.wwl.implement-sensitivity-labels.create
-- learn.wwl.implement-sensitivity-labels.publish
-- learn.wwl.implement-sensitivity-labels.remove-delete
+- learn.wwl.implement-sensitivity-labels.examine-requirements-create-sensitivity-label
+- learn.wwl.implement-sensitivity-labels.plan-deployment-strategy-sensitivity-labels
+- learn.wwl.implement-sensitivity-labels.create-sensitivity-labels
+- learn.wwl.implement-sensitivity-labels.publish-sensitivity-labels
+- learn.wwl.implement-sensitivity-labels.remove-delete-sensitivity-labels
 - learn.wwl.implement-sensitivity-labels.knowledge-check
 - learn.wwl.implement-sensitivity-labels.summary
 badge:
