changed files by pdets auto publish service, publishid[6e40a79b-740e-4885-a9fd-e9684d62567b] and do [publish].

--- a/learn-m365-pr/wwl/explore-sensitivity-labels/2-manage-data-protection-sensitivity-labels.yml
+++ b/learn-m365-pr/wwl/explore-sensitivity-labels/2-manage-data-protection-sensitivity-labels.yml
@@ -17,7 +17,7 @@ content: |
 quiz:
   title: "Check your knowledge"
   questions:
-  - content: "Organizations can tie sensitivity labels with other actions on a document. For example, an organization can configure a label, such as a \"Highly Confidential\" label, so that it encrypts the data in whatever document or email that it's applied to. By encrypting a document, what other effect can encryption have on the document?"
+  - content: "Organizations can tie sensitivity labels with other actions on a document. For example, an organization can configure a label, such as a \"Highly Confidential\" label, so that it encrypts the data in whatever document or email that it's applied to. When a document is encrypted, what other effect can encryption have on the document?"
     choices:
     - content: "It causes a watermark to be automatically displayed on the content"
       isCorrect: false
