--- a/learn-m365-pr/wwl/explore-sensitivity-labels/4-determine-sensitivity-label-scope.yml
+++ b/learn-m365-pr/wwl/explore-sensitivity-labels/4-determine-sensitivity-label-scope.yml
@@ -17,7 +17,7 @@ content: |
 quiz:
   title: "Check your knowledge"
   questions:
-  - content: "As the Enterprise Administrator for Contoso, Holly Dickson is creating a sensitivity label. When defining the scope for the label, Holly configured the label settings. What else can Holly define as part of the label's scope?"
+  - content: "As the Enterprise Administrator for Contoso, Holly Dickson is creating a sensitivity label. When Holly defined the scope for the label, she configured the label settings. What else can Holly define as part of the label's scope?"
     choices:
     - content: "Where the label will be visible to users"
       isCorrect: true
