--- a/learn-m365-pr/wwl/implement-data-classification-of-sensitive-information/4-explore-trainable-classifiers.yml
+++ b/learn-m365-pr/wwl/implement-data-classification-of-sensitive-information/4-explore-trainable-classifiers.yml
@@ -6,7 +6,9 @@ metadata:
   description: "Explore trainable classifiers"
   ms.date: 06/16/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 9
