--- a/learn-m365-pr/paths/implement-data-governance-microsoft-365-intelligence/index.yml
+++ b/learn-m365-pr/paths/implement-data-governance-microsoft-365-intelligence/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.implement-data-governance-microsoft-365-intelligence
 metadata:
-  title: Implement data governance in Microsoft 365 intelligence
-  description: Implement data governance in Microsoft 365 intelligence
-  ms.date: 06/10/2021
+  title: Implement compliance in Microsoft 365
+  description: Implement compliance in Microsoft 365
+  ms.date: 06/17/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Implement data governance in Microsoft 365 intelligence
+title: Implement compliance in Microsoft 365
 prerequisites: |
   - Students should have completed a role-based administrator collection such as Messaging, Teamwork, Security and Compliance, or Collaboration.
   - Students should have a proficient understanding of DNS and basic functional experience with Microsoft 365 services.
@@ -24,20 +24,17 @@ roles:
 - solution-architect
 - technology-manager
 products:
-- azure-active-directory
 - m365
 - office-365
 subjects:
-- information-protection-governance
-- compliance
 - cloud-security
+- compliance
+- information-protection-governance
 modules:
-- learn.wwl.evaluate-your-compliance-readiness
-- learn.wwl.implement-compliance-solutions
+- learn.wwl.explore-compliance-microsoft-365
+- learn.wwl.implement-microsoft-purview-insider-risk-management
 - learn.wwl.create-information-barriers-microsoft-365
-- learn.wwl.create-dlp-policy-from-built-template
-- learn.wwl.create-custom-dlp-policy
-- learn.wwl.create-dlp-policy-to-protect-documents
-- learn.wwl.implement-policy-tips-for-dlp-policies
+- learn.wwl.explore-data-loss-prevention-microsoft-365
+- learn.wwl.implement-data-loss-prevention-policies
 trophy:
   uid: learn.wwl.implement-data-governance-microsoft-365-intelligence.trophy
