--- a/learn-m365-pr/wwl/troubleshoot-compliance-retention-issues/7-knowledge-check.yml
+++ b/learn-m365-pr/wwl/troubleshoot-compliance-retention-issues/7-knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   title: Knowledge check
   description: "Knowledge check"
-  ms.date: 06/16/2022
+  ms.date: 06/17/2022
   author: wwlpublish
   ms.author: dawnhopper
   ms.topic: interactive-tutorial
@@ -28,7 +28,7 @@ quiz:
     - content: "Hard delete"
       isCorrect: false
       explanation: "That's incorrect. A hard delete is when items are purged from the Exchange database and aren't recoverable."
-  - content: "An administrator colleague has asked you for help with an eDiscovery case. You try to access the case but it doesn't appear in the list within the Microsoft Purview compliance portal. Which role group do you need to be a member of?"
+  - content: "An administrator colleague has asked you for help with an eDiscovery case. You try to access the case but it doesn't appear in the list within the compliance portal. Which role group do you need to be a member of?"
     choices:
     - content: "eDiscovery Manager"
       isCorrect: false
