changed files by pdets auto publish service, publishid[7f222160-4b3d-4a4d-b9d0-31df3ae3b37b] and do [publish].

--- a/learn-m365-pr/wwl/explore-sensitivity-labels/3-explore-sensitivity-labels.yml
+++ b/learn-m365-pr/wwl/explore-sensitivity-labels/3-explore-sensitivity-labels.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.wwl.explore-sensitivity-labels.explore-sensitivity-labels
+uid: learn.wwl.explore-sensitivity-labels.explore-what-can-do
 title: Explore what sensitivity labels can do
 metadata:
   title: Explore what sensitivity labels can do
