--- a/learn-m365-pr/wwl/explore-sensitivity-labels/4-determine-sensitivity-label-scope.yml
+++ b/learn-m365-pr/wwl/explore-sensitivity-labels/4-determine-sensitivity-label-scope.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.wwl.explore-sensitivity-labels.determine-sensitivity-label-scope
+uid: learn.wwl.explore-sensitivity-labels.determine-scope
 title: Determine a sensitivity label's scope
 metadata:
   title: Determine a sensitivity label's scope
