--- a/learn-m365-pr/wwl/explore-sensitivity-labels/5-explore-sensitivity-label-policies.yml
+++ b/learn-m365-pr/wwl/explore-sensitivity-labels/5-explore-sensitivity-label-policies.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.wwl.explore-sensitivity-labels.explore-sensitivity-label-policies
+uid: learn.wwl.explore-sensitivity-labels.label-policies
 title: Explore sensitivity label policies
 metadata:
   title: Explore sensitivity label policies
